--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = ">=3.10,<3.13"
 numpy = "^1.26.1"
 chromadb = "^0.4.14"
+pandas = "^2.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
